--- a/regression/tamim.ipynb
+++ b/regression/tamim.ipynb
@@ -36,7 +36,7 @@
         "colab": {}
       },
       "source": [
-        "df = pd.read_csv('/content/tamim_t20_jan_2020_stat_cricinfo.csv', index_col='date', parse_dates=True)"
+        "df = pd.read_csv('./tamim_t20_jan_2020_stat_cricinfo.csv', index_col='date', parse_dates=True)"
       ],
       "execution_count": 0,
       "outputs": []
